added a small test to show the 10k problem

--- a/src/main/resources/views/GET/index.mustache
+++ b/src/main/resources/views/GET/index.mustache
@@ -1,1 +1,6 @@
 This is the index view!
+
+<form method="post" enctype="multipart/form-data">
+    <input type="file" name="test.file"/>
+    <input type="submit"/>
+</form>
